{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 36,
  "lineage": "4ef6fc5b-ddc9-e95d-58ec-176806e0d380",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "skmt_elk_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06a40c12e5bd9b028",
            "arn": "arn:aws:ec2:sa-east-1:924309154876:instance/i-006406d670d28c541",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SKMT-EC2-Role",
            "id": "i-006406d670d28c541",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "esakamoto-aws3-sp-key2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09badfe99d864645c",
            "private_dns": "ip-10-0-1-246.sa-east-1.compute.internal",
            "private_ip": "10.0.1.246",
            "public_ip": "18.231.110.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a8fbf4cb0e489dfc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033a5445dbc8f5d63",
            "tags": {
              "Name": "SKMT-ELK-Server",
              "SKMT-SystemManager": "true"
            },
            "tags_all": {
              "Name": "SKMT-ELK-Server",
              "SKMT-SystemManager": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0015b0cacd49e7f69"
            ]
          },
          "dependencies": [
            "aws_security_group.skmt_sg_elk",
            "aws_subnet.skmt_public_subnet_elk",
            "aws_vpc.skmt_vpc_elk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "smkt_igw_elk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:internet-gateway/igw-0075a1907b7f05eaf",
            "id": "igw-0075a1907b7f05eaf",
            "owner_id": "924309154876",
            "tags": {
              "Name": "smkt_igw_elk"
            },
            "tags_all": {
              "Name": "smkt_igw_elk"
            },
            "vpc_id": "vpc-09b0f053a6ea5875e"
          },
          "dependencies": [
            "aws_vpc.skmt_vpc_elk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "skmt_route_1_elk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0075a1907b7f05eaf",
            "id": "r-rtb-098d6e9d8e97201751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-098d6e9d8e9720175",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.smkt_igw_elk",
            "aws_route_table.skmt_route_table_elk",
            "aws_vpc.skmt_vpc_elk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "skmt_route_table_elk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:route-table/rtb-098d6e9d8e9720175",
            "id": "rtb-098d6e9d8e9720175",
            "owner_id": "924309154876",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "skmt_route_table_elk"
            },
            "tags_all": {
              "Name": "skmt_route_table_elk"
            },
            "vpc_id": "vpc-09b0f053a6ea5875e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.skmt_vpc_elk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0050920a9eb15cd29",
            "route_table_id": "rtb-098d6e9d8e9720175",
            "subnet_id": "subnet-033a5445dbc8f5d63"
          },
          "dependencies": [
            "aws_route_table.skmt_route_table_elk",
            "aws_subnet.skmt_public_subnet_elk",
            "aws_vpc.skmt_vpc_elk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "skmt_sg_elk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:security-group/sg-0015b0cacd49e7f69",
            "description": "Security Group for SKMT VPC",
            "egress": [],
            "id": "sg-0015b0cacd49e7f69",
            "ingress": [],
            "name": "skmt_sg_elk",
            "name_prefix": "",
            "owner_id": "924309154876",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "skmt_sg_elk"
            },
            "tags_all": {
              "Name": "skmt_sg_elk"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b0f053a6ea5875e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.skmt_vpc_elk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_1_elk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2891578058",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0015b0cacd49e7f69",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg_elk",
            "aws_vpc.skmt_vpc_elk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_2_elk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-321142201",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0015b0cacd49e7f69",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg_elk",
            "aws_vpc.skmt_vpc_elk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_3_elk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3962784124",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0015b0cacd49e7f69",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg_elk",
            "aws_vpc.skmt_vpc_elk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "skmt_public_subnet_elk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:subnet/subnet-033a5445dbc8f5d63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-033a5445dbc8f5d63",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924309154876",
            "tags": {
              "Name": "skmt_public_subnet_elk"
            },
            "tags_all": {
              "Name": "skmt_public_subnet_elk"
            },
            "vpc_id": "vpc-09b0f053a6ea5875e"
          },
          "dependencies": [
            "aws_vpc.skmt_vpc_elk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "skmt_vpc_elk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:924309154876:vpc/vpc-09b0f053a6ea5875e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09cc4959cf9d4811d",
            "default_route_table_id": "rtb-08342d3aa70ddd1fb",
            "default_security_group_id": "sg-0230a2203fbbb3deb",
            "dhcp_options_id": "dopt-15316b72",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09b0f053a6ea5875e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08342d3aa70ddd1fb",
            "owner_id": "924309154876",
            "tags": {
              "Name": "skmt_vpc_elk"
            },
            "tags_all": {
              "Name": "skmt_vpc_elk"
            }
          }
        }
      ]
    }
  ]
}